creation of whole-body controller plugin interface

--- a/moveit_plugins/moveit_fake_controller_manager/CMakeLists.txt
+++ b/moveit_plugins/moveit_fake_controller_manager/CMakeLists.txt
@@ -12,10 +12,12 @@ include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
 find_package(catkin COMPONENTS
+  geometry_msgs
   moveit_core
   moveit_ros_planning
   pluginlib
   roscpp
+  std_msgs
   REQUIRED)
 
 include_directories(${catkin_INCLUDE_DIRS})
