--- a/moveit_planners/chomp/chomp_motion_planner/package.xml
+++ b/moveit_planners/chomp/chomp_motion_planner/package.xml
@@ -16,6 +16,8 @@
   <build_depend>moveit_experimental</build_depend>
   <build_depend>moveit_core</build_depend>
 
+  <depend>trac_ik_lib</depend>
+
 </package>
 
 
